proposals, FFM, general context manager stubs